Refactoring Exception Class

--- a/NetBeans/gamecopilot/src/main/java/view/ShopGamesWindow.form
+++ b/NetBeans/gamecopilot/src/main/java/view/ShopGamesWindow.form
@@ -86,7 +86,7 @@
                 <Column editable="false" title="Title" type="java.lang.Object"/>
                 <Column editable="false" title="Description" type="java.lang.Object"/>
                 <Column editable="false" title="Price" type="java.lang.Object"/>
-                <Column editable="false" title="Quantity" type="java.lang.Object"/>
+                <Column editable="false" title="In Stock" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
