--- a/NetBeans/gamecopilot/src/main/java/view/GameDataWindow.form
+++ b/NetBeans/gamecopilot/src/main/java/view/GameDataWindow.form
@@ -211,9 +211,11 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="txtDescription">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
